--- a/chrome-extension/chat.html
+++ b/chrome-extension/chat.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>聊天室 - 網頁資料溝通器</title>
+  <script src="api-config.js"></script>
   <script src="chat.js" defer></script>
   <style>
     body {
