--- a/chrome-extension/chat.html
+++ b/chrome-extension/chat.html
@@ -276,9 +276,10 @@
 </head>
 <body>
   <div class="chat-header">
-    <button class="back-button" id="backButton">←</button>
-    <div class="chat-title">💬 智能助手</div>
-    <div class="chat-status" id="chatStatus">準備就緒</div>
+  <button class="back-button" id="backButton">←</button>
+  <div class="chat-title">💬 智能助手</div>
+  <button class="clear-button" id="clearButton" title="清除聊天內容">🗑️</button>
+  <div class="chat-status" id="chatStatus">準備就緒</div>
   </div>
   
   <div class="chat-messages" id="chatMessages">
